--- a/app/src/main/res/layout/soundsofalanguage.xml
+++ b/app/src/main/res/layout/soundsofalanguage.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Sounds"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Each language has its own sounds and nuances that differ from the next. To speak a language correctly, you need to pronounce sounds in a certain manner. You spent years as a child babbling and making every possible sound under the sun; so at a later stage of life, we tend to forget how to do this. The key is to listen closely and keep repeating this throughout your entire time learning a language in order to constantly improve and strive for perfection."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Accent"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Due to human nature, each area has its own way of speaking that is slightly different to the last. You cannot simply learn the accent of a country, but you can learn the accent of a geographical area. For example, imagine someone imitated your country's accent and what they imitated was on the opposite side of it. Wouldn't it sound strange? There isn't a standard country accent, only local accents that differ from one another."/>
 
         <View
             android:layout_width="fill_parent"
