--- a/app/src/main/res/layout/acccase.xml
+++ b/app/src/main/res/layout/acccase.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="The Receiver"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="The accusative case is the direct object of a sentence - also known as the receiver of an action. In a sentence, there isn't always a need for a verb to have a direct object. It's normally found by asking the question 'what?' or 'whom?'"/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Examples"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,25 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Itheann an madra bia (acc)\nThe dog eats food (acc)\n(What is being eaten by the dog? The food is.)\n\nChaith Aodh an charraig (acc)\nAodh threw the stone (acc)\n(What was thrown by Aodh? The stone was.)"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingTop="10dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="It is possible to have sentences that do not have an object, and stand only in the nominative case:\n\nTá mé anseo\nI am here\n(Who is here? I am.)\n\nIs athair maith é.\nHe is a good father.\n(Who is a good father? He is.)"/>
 
         <View
             android:layout_width="fill_parent"
