--- a/app/src/main/res/layout/nomcase.xml
+++ b/app/src/main/res/layout/nomcase.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="The Doer"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Nominative case is the doer of an action. It is known as the 'subject' or 'agent' of a sentence, A noun always stands in the nominative case if the noun does an action to something. It's normally found by asking 'who?'"/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Examples"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,17 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Itheann an madra (nom) bia\nThe dog (nom) eats food\n(Who eats the food? The dog does.)\n\nChaith Aodh (nom) an charraig\nAodh (nom) threw the stone\n(Who threw the stone? Aodh did.)"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="In each of these examples, there is both a subject (an madra (the dog), Aodh (forename - 'Aodh')), and a receiver of the action called the direct object (the accusative case)."/>
 
         <View
             android:layout_width="fill_parent"
