--- a/app/src/main/res/layout/whatisacase.xml
+++ b/app/src/main/res/layout/whatisacase.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Cases"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,30 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Every word in a languge has some sort of role in a context - this is even apparent in English to a lesser extent. For example, the words &quot;I&quot; and &quot;me&quot; do not have the same function, but they do refer to the same perspective."
+            android:id="@+id/cases_about" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="I go to the shop.\nMe go to the shop.\nDo you see I?\nDo you see me?"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="In the above example, the second and third examples are nonsense. But ask yourself why is this so? The answer is that the two words are governed by different cases; or more simply, they have two different roles in portraying meaning. &quot;I&quot; refers to someone who is doing an action and is causing a result by it; while &quot;me&quot; refers to the receiver of an action."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +88,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="But what does this mean?"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +98,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="The main function of cases is to give more meaning to a word. In English, there are only two cases - subjective and objective, ie who is carrying out the action vs who is receiving the action. Irish is known as an 'inflected language', a term which means that the endings of words are slightly modified logically depending on the case. There are five cases that are officially recognised, but three of them are identical for most uses.\n\nFor those who have skipped on, you'll notice that I have six cases in this guide, this is due to making it easier to understand a concept known as partitive case.\n\nIn the next section we'll deal with the nominative case."/>
 
         <View
             android:layout_width="fill_parent"
